tests/ui/delegation/glob-non-impl.stderr
error: delegation is not supported in `extern` blocks
  --> $DIR/glob-non-impl.rs:15:5
   |
LL |     reuse Trait::*;
   |     ^^^^^^^^^^^^^^^

error: glob delegation is only supported in impls
  --> $DIR/glob-non-impl.rs:8:1
   |
LL | reuse Trait::*;
   | ^^^^^^^^^^^^^^^

error: glob delegation is only supported in impls
  --> $DIR/glob-non-impl.rs:11:5
   |
LL |     reuse Trait::*;
   |     ^^^^^^^^^^^^^^^

error: glob delegation is only supported in impls
  --> $DIR/glob-non-impl.rs:19:5
   |
LL |     reuse Trait::*;
   |     ^^^^^^^^^^^^^^^

error: aborting due to 4 previous errors

